--- a/Project/MainWindow.xaml
+++ b/Project/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project"
         mc:Ignorable="d"
-        Title="MainWindow" Height="700" MaxHeight="700" MaxWidth="600" MinWidth="600" BorderThickness="1" BorderBrush="Black" Loaded="Window_Loaded">
+        Title="MainWindow" Height="700"  MaxWidth="600" MinWidth="600" BorderThickness="1" BorderBrush="Black" Loaded="Window_Loaded">
       
     <Grid Margin="10,10,10,10">
         <Grid.ColumnDefinitions>
